--- a/subirInfo2022.html
+++ b/subirInfo2022.html
@@ -14,7 +14,20 @@
     </style>
 </head>
 <body>
-<!-- CONTENIDO -->
+    <!-- BARRA DE NAVEGACION -->
+    <!-- <nav class="sidebar">
+        <div class="sidebar-header">
+            <ion-icon name="cloud-outline"></ion-icon>
+            <h1>H. AYUNTAMIENTO DE CÓRDOBA</h1>
+            <ul class="sidebar-menu">
+                <li><a href="departamentos2022.html">Resumen documental</a></li>
+                <li><a href="subirInfo.html">Subir Información</a></li>
+                <li><a href="#">Áreas Digitalizadas</a></li>
+            </ul>
+        </div>
+    </nav> -->
+
+    <!-- CONTENIDO -->
     <main class="main-content">
         <section>
             <figure>
