SUBIR ENTREGA RECEPCION Y USUARIOS

--- a/departamentos2022.html
+++ b/departamentos2022.html
@@ -40,7 +40,7 @@
 
     <!-- CLASIFICACION DOCUMENTAL -->
     <div class="form-group" id="clasificacionContainer" style="display:none;">
-        <label for="clasificacion">RUBROS DE ÁREA</label>
+        <label for="clasificacion">SUB ÁREAS</label>
         <select id="clasificacion">
             <option value="">Seleccione una clasificación</option>
         </select>
