--- a/municipio.html
+++ b/municipio.html
@@ -23,8 +23,8 @@
     <div class="button-container">
         <button onclick="location.href='departamentos2022.html'">DIGITALIZACIÓN<img src="img/archivo.png" alt="Icono"></button>
         <button onclick="location.href='subirInfo2022.html'">SUBIR INFORMACIÓN<img src="img/subir.png" alt="Icono"></button>
-        <button onclick="location.href='departamentos2024.html'">ENTREGA RECEPCIÓN<img src="img/entrega.png" alt="Icono"></button>
-        <button onclick="location.href='subirInfo2022.html'">SUBIR INFORMACIÓN ENTREGA RECEPCIÓN<img src="img/subir.png" alt="Icono"></button>
+        <button onclick="location.href='entregaRecepcion.html'">ENTREGA RECEPCIÓN<img src="img/entrega.png" alt="Icono"></button>
+        <button onclick="location.href='subirInfo_ER_2022.html'">SUBIR INFORMACIÓN ENTREGA RECEPCIÓN<img src="img/subir.png" alt="Icono"></button>
     </div>
     
     
