--- a/subirInfo_ER_2022.html
+++ b/subirInfo_ER_2022.html
@@ -5,32 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DEPARTAMENTOS</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;700&display=swap">
-    <link rel="stylesheet" href="../css/subirInfo.css">
-    <link rel="icon" href="../img/TDP-REDONDO.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/subirInfo.css">
+    <link rel="icon" href="img/TDP-REDONDO.png" type="image/x-icon">
 </head>
 <body>
     <!-- CONTENIDO -->
     <main class="main-content">
         <section>
             <figure>
-                <img class="imgTDP" src="../img/logoTDP.png" alt="logo">
+                <img class="imgTDP" src="img/logoTDP.png" alt="logo">
             </figure>
             <h1 class="titulo">DIGITALIZACIÓN E-GOBIERNO</h1>
             <h2 class="subtitulo">SELECCIONE LAS OPCIONES PARA SUBIR LA INFORMACIÓN</h2>
 
-            <form action="upload.php" method="post" enctype="multipart/form-data">
+            <form action="upload_ER.php" method="post" enctype="multipart/form-data">
                 <section class="search-options">
                     <div class="form-group">
                         <label for="area">ÁREA</label>
                         <select id="area" name="area">
                             <option value="">Seleccione una opción</option>
-                            <option value="presidencia">PRESIDENCIA</option>
-                            <option value="sindicatura">SINDICATURA</option>
-                            <option value="secretaria">SECRETARIA</option>
-                            <option value="regidores">REGIDORES</option>
-                            <option value="tesoreria">TESORERIA</option>
-                            <option value="contraloria">CONTRALORIA MUNICIPAL</option>
-                            <option value="obraspublicas">OBRAS PUBLICAS E INFRAESTRUCTURA</option>              
+                            <option value="presidencia_er">PRESIDENCIA</option>
+                            <option value="tesoreria_er">TESORERIA</option>
+                            <option value="catastro_er">CATASTRO</option>
+                            <option value="secretaria_er">SECRETARIA</option>
+                            <option value="contraloria_er">CONTRALORIA MUNICIPAL</option>
+                            <option value="obraspublicas_er">OBRAS PUBLICAS E INFRAESTRUCTURA</option>   
+                            <option value="regidores_er">REGIDORES</option>
+                            <option value="areas_er">TODAS LAS AREAS</option>
+                            <option value="areasUsuarias_er">AREAS USUARIAS</option>
+                            <option value="Utransparencia_er">UNIDAD DE TRANSPARENCIA</option>
                         </select>
                     </div>
 
@@ -38,20 +41,6 @@
                         <label for="clasificacion">RUBROS DE ÁREA</label>
                         <select id="clasificacion" name="clasificacion">
                             <option value="">Seleccione una clasificación</option>
-                        </select>
-                    </div>
-
-                    <div class="form-group" id="documentosContainer" style="display:none;">
-                        <label for="entregaRecepcion">DOCUMENTOS GENERALES DEL ÁREA</label>
-                        <select id="entregaRecepcion" name="documentos">
-                            <option value="">Seleccione un documento</option>
-                        </select>
-                    </div>
-
-                    <div class="form-group" id="periodoContainer" style="display:none;">
-                        <label for="periodo">PERIODO</label>
-                        <select id="periodo" name="periodo">
-                            <option value="">Seleccione un periodo</option>
                         </select>
                     </div>
 
@@ -66,7 +55,7 @@
                 </div>
 
                 <div class="search-container">
-                    <button type="submit" class="save-button">
+                    <button type="submit" class="save-button" id="consultaBtn">
                         <ion-icon name="save-outline"></ion-icon> Guardar
                     </button>
                 </div>
@@ -76,8 +65,8 @@
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="js/formulario.js"></script>
-    <!-- Script para mostrar alertas de éxito o error -->
+    <script src="js/ER.JS"></script>
+        <!-- Script para mostrar alertas de éxito o error -->
     <script>
         // Mostrar alerta si hay un mensaje de error o éxito en la URL
         window.onload = function() {
