--- a/departamentos2022.html
+++ b/departamentos2022.html
@@ -82,5 +82,6 @@
     <script src="js/formulario.js"></script>
     <script src="js/script.js"></script>
     <script src="js/btn_buscar.js"></script>
+    <script src="js/inactividad.js"></script>
 </body>
 </html>
