generar pdf a municipio y empresa

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="form-section">
             <div class="form-container">
                 <img src="img/LogoTDP.png" alt="Logo">
-                <h1>DIGITALIZACIÓN MUNICIPAL</h1>
+                <!-- <h1>DIGITALIZACIÓN MUNICIPAL</h1> -->
                 <form action="login.php" method="POST">
                     <input type="text" class="form-control" name="username" id="username" required placeholder="Ingresa tu usuario">
                     <input type="password" class="form-control" id="password" name="password" required placeholder="Ingresa tu contraseña">
